# cc-py

./: .cookiecutter-ignore  LICENSE  README.md  cookiecutter.json
cli/{{cookiecutter.project_slug}}/: .gitignore  README.md
fastapi/: cookiecutter.json
fastapi/{{cookiecutter.__project_dashed}}/: README.md  pyproject.toml
fastapi/{{cookiecutter._project_dashed}}/: README.md  pyproject.toml
fastapi/{{cookiecutter._project_dashed}}/app/repositories/: json_store.py
fastapi/{{cookiecutter._project_dashed}}/data/: example.json
fastapi/{{cookiecutter.project_folder}}/: README.md  pyproject.toml
fastapi/{{cookiecutter.project_folder}}/app/: main.py
fastapi/{{cookiecutter.project_folder}}/app/core/: cors_middleware.py
fastapi/{{cookiecutter.project_folder}}/app/repositories/: json_store.py
fastapi/{{cookiecutter.project_folder}}/app/routers/: example.py
fastapi/{{cookiecutter.project_folder}}/app/schemas/: example.py
fastapi/{{cookiecutter.project_folder}}/tests/: test_health.py
fastapi/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
fastapi/{{cookiecutter.project_slug}}/app/: main.py
fastapi/{{cookiecutter.project_slug}}/app/api/v1/: endpoints.py
fastapi/{{cookiecutter.project_slug}}/app/core/: config.py  cors.py
fastapi/{{cookiecutter.project_slug}}/app/routers/: example.py
fastapi/{{cookiecutter.project_slug}}/app/schemas/: example.py
fastapi/{{cookiecutter.project_slug}}/tests/: test_health.py  test_main.py
hooks/: pre_gen_project.py
python-script/: cookiecutter.json
python-script/{{cookiecutter.__project_dashed}}/: README.md  pyproject.toml
python-script/{{cookiecutter._project_dashed}}/: .gitignore  README.md  pyproject.toml
python-script/{{cookiecutter.project_folder}}/: README.md  pyproject.toml
python-script/{{cookiecutter.project_folder}}/tests/: test_main.py
python-script/{{cookiecutter.project_folder}}/{{cookiecutter.project_slug}}/: main.py
python-script/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
python-script/{{cookiecutter.project_slug}}/tests/: test_main.py
python-script/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.py  setup.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
