[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [{ name = "{{ cookiecutter.username }}" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "{{ cookiecutter.license }}" }

dependencies = []

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.main:main"
