[project]
name = "{{ cookiecutter.project_folder }}"
version = "0.1.0"
description = ""
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "fastapi[standard]>=0.111",
    "pydantic-settings>=2.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app", "data"]