[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [{name = "{{ cookiecutter.username }}", email = "{{ cookiecutter.email }}"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn[standard]"
]

[project.scripts]
{{ cookiecutter.project_slug }} = "app.main:app"

[tool.setuptools.packages.find]
where = ["app"]
