[project]
name = "{{ cookiecutter.__project_dashed }}"
version = "0.1.0"
description = ""
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ cookiecutter.project_slug }}*"]