[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]